<resources>
    <string name="app_name">pz27ValovMaximPR23101</string>
    <string name="avatar_desc">pz271</string>
    <string name="notification_desc">pz272</string>
    <string name="promo_image_desc">pz273</string>
    <string name="care_icon_desc">pz274</string>
    <string name="send_desc">pz276</string>
    <string name="wallet_desc">pz277</string>
    <string name="chats_desc">pz278</string>
    <string name="home_desc">pz279</string>
    <string name="track_desc">pz2710</string>
    <string name="profile_desc">pz2711</string>
    <string name="search_services_string">Search services</string>
    <string name="search_icon">search icon</string>
    <string name="home_icon">Home icon</string>
    <string name="wallet_icon">Wallet icon</string>
    <string name="track_icon">Track icon</string>
    <string name="search_background">Search background</string>
    <string name="customer_care_icon">Customer care icon</string>
    <string name="package_icon">Package icon</string>
    <string name="card_background">Card background</string>
    <string name="chat_icon">Chat icon</string>
    <string name="footer_background">Footer background</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="profile_background">Profile background</string>
    <string name="bell_icon">Bell icon</string>
    <string name="photo_1">Photo 1</string>
    <string name="photo_2_layout">photo 2 layout</string>
    <string name="photo_3_layout">photo 3 layout</string>
    <string name="photo_2">photo 2</string>
    <string name="photo_3">photo 3</string>
    <string name="photo_4">photo 4</string>
    <string name="hello_ken">Hello Ken!</string>
    <string name="hello_text">To fund your wallet is as easy as ABC, make use of our fast technology and top-up your wallet today</string>
    <string name="chats">Chats</string>
    <string name="search_text">Search for available rider within your area</string>
    <string name="wallet">Wallet</string>
    <string name="track">Track</string>
    <string name="we_trust_text">We trust you are having a great time</string>
    <string name="special_for_you_text">Special for you</string>
    <string name="tech_meetup_text">Tech Meetup coming soon</string>
    <string name="www_techmeetup_text">www.techmeetup</string>
    <string name="what_would_text">What would you like to do</string>
    <string name="customer_care">Customer Care</string>
    <string name="our_customer_text">Our customer care service line is available from 8 -9pm week days and 9 - 5 weekends - tap to call us today</string>
    <string name="send_a_package">Send a package</string>
    <string name="request_for_text">Request for a driver to pick up or deliver your package for you</string>
    <string name="fund_your_wallet">Fund your wallet</string>
    <string name="search_services">Search services</string>
    <string name="john_joshua">John Joshua</string>
    <string name="thanks_for_your_service">Thanks for your service</string>
    <string name="chinonso_james">Chinonso James</string>
    <string name="alright_i_wll_be_waiting">Alright, I wll be waiting</string>
    <string name="raph_ron">Raph Ron</string>
    <string name="joy_ezekiel">Joy Ezekiel</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="phone_icon">Phone icon</string>
    <string name="header_background">Header background</string>
    <string name="emoji_icon">Emoji icon</string>
    <string name="mic_icon">Mic icon</string>
    <string name="send_icon">Send icon</string>
    <string name="hello_please_text">Hello, Please check your phone, I just booked you to deliver my stuff</string>
    <string name="i_am_already_text">I am already on my way to the pick up venue.</string>
    <string name="thank_you_for_text">Thank you for contacting me.</string>
    <string name="plus_icon">Plus icon</string>
    <string name="camera_icon">Camera icon</string>
    <string name="pause_icon">Pause icon</string>
    <string name="speaker_icon">Speaker icon</string>
    <string name="buttons_icon">Buttons icon</string>
    <string name="mute_icon">Mute icon</string>
    <string name="_234_603_6543_7265">+234 603 6543 7265</string>
    <string name="calling">calling...</string>

    <string name="welcome">Hello Max0ut</string>
    <string name="Wallet">Wallet</string>
    <string name="Current_balance">Current balance:</string>
    <string name="current_number">N10,712:00</string>
    <string name="transaction_history">Transaction History</string>
    <string name="Top_Up">Top Up</string>
    <string name="Bank">Bank</string>
    <string name="Transfer">Transfer</string>
    <string name="Card">Card</string>
    <string name="first_transaction">-N3,000.00</string>
    <string name="first_transaction_text">Delivery fee</string>
    <string name="first_transaction_date">July 7, 2022</string>
    <string name="second_transaction">N2,000.00</string>
    <string name="second_transaction_text">Lalalalala</string>
    <string name="second_transaction_date">July 4, 2022</string>
    <string name="third_transaction">-N3,000.00</string>
    <string name="third_transaction_text">Third Delivery</string>
    <string name="third_transaction_date">July 1, 2022</string>
    <string name="fourth_transaction">N1,000.00</string>
    <string name="fourth_transaction_text">Another One</string>
    <string name="fourth_transaction_date">June 27, 2022</string>
    <string name="fifth_transaction">N2,500.00</string>
    <string name="fifth_transaction_text">Experts Are The Best</string>
    <string name="fifth_transaction_date">June 23, 2022</string>
    <string name="sixth_transaction">-N3,000.00</string>
    <string name="sixth_transaction_text">Delivery fee</string>
    <string name="sixth_transaction_date">June 17, 2022</string>
    <string name="Home">Home</string>
    <string name="Track">Track</string>
    <string name="Profile">Profile</string>
    <string name="Add_Payment_method">Add Payment method</string>
    <string name="Pay_with_wallet">Pay with wallet</string>
    <string name="complete">complete the payment using your e wallet</string>
    <string name="Credit__debit_card">Credit / debit card</string>
    <string name="complete_debit_card">complete the payment using your debit card</string>
    <string name="Proceed_to_pay">Proceed to pay</string>
    <string name="first_card">**** **** 3323</string>
    <string name="second_card">**** **** 1547</string>
    <string name="send">Send a package</string>
    <string name="info">Package information</string>
    <string name="origin">Origin details</string>
    <string name="Mbaraugba">Mbaraugba, Ovom Amaa Asaa, Abia state</string>
    <string name="number">+234 56543 96854</string>
    <string name="Destination">Destination details</string>
    <string name="Ademola">19 Ademola Alabi close, lagos </string>
    <string name="number2">+234 70644 80655</string>
    <string name="Other">Other details</string>
    <string name="Package">Package Items</string>
    <string name="Weight">Weight of items</string>
    <string name="Worth">Worth of Items</string>
    <string name="Tracking">Tracking Number</string>
    <string name="Books">Books ans stationary, Garri Ngwa</string>
    <string name="kg">1000kg</string>
    <string name="N5">N50,000</string>
    <string name="R">R-7458-4567-4434-5854</string>
    <string name="Charges">Charges</string>
    <string name="Delivery">Delivery Charges</string>
    <string name="Instant">Instant delivery</string>
    <string name="Tax">Tax and Service Charges</string>
    <string name="N2">N2,500.00</string>
    <string name="N3">N300.00</string>
    <string name="N20">N200.00</string>
    <string name="total">Package total</string>
    <string name="N30">N3000.00</string>
    <string name="Click">Click on  delivered for successful delivery and rate rider or report missing item</string>
    <string name="Report">Report</string>
    <string name="Successful">Successful</string>
</resources>